--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,29 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+title: Zetsu
+email: zetsu@domain.com
+description: Um lindo tema feito para jekyll e com o <3
+baseurl: "/zetsu"
+url: "http://nandomoreira.me"
+
+author:
+  name     : 'Fernando Moreira'
+  email    : hi@nandomoreira.me
+  url      : http://nandomoreira.me
+  facebook : http://facebook.com/fernando.dev
+  twitter  : http://twitter.com/nandomoreirame
+
+github: https://github.com/nandomoreirame/zetsu
+disqus_shortname: "fernandomoreira"
+google_analytics: UA-52446115-1
+
+paginate: 2
+comments: true
+paginate_path: "/page/:num"
+
+sass:
+  style: :compressed
+  sass_dir: _sass
 
 # Build settings
-markdown: kramdown
+markdown  : kramdown
+permalink : /:title/
