remove some post and update config

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: "http://deoliveiralucas.github.io"
 author:
   name     : 'Lucas de Oliveira'
   email    : conato@deoliveiralucas.net
-  url      : deoliveiralucas.net
+  url      : http://deoliveiralucas.net
   facebook : http://facebook.com
   twitter  : http://twitter.com
 
