--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ author:
   url      : http://deoliveiralucas.net
   linkedin : https://br.linkedin.com/pub/lucas-de-oliveira/a0/b94/34
   github   : https://github.com/deoliveiralucas
+  gmail    : 94oliveira.lucas@gmail.com
 
 github: https://github.com/deoliveiralucas
 disqus_shortname: "deoliveiralucas"
