--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: lucas de oliveira
+title: Lucas de Oliveira
 email: contato@deoliveiralucas.net
 description: blog
 baseurl: "http://deoliveiralucas.github.io"
