--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ author:
   linkedin : https://br.linkedin.com/pub/lucas-de-oliveira/a0/b94/34
   github   : https://github.com/deoliveiralucas
   gmail    : 94oliveira.lucas@gmail.com
+  twitter  : https://twitter.com/oliveiralucasbr
 
 github: https://github.com/deoliveiralucas
 disqus_shortname: "deoliveiralucas"
