Add deploy config

--- a/.env.dist
+++ b/.env.dist
@@ -1,3 +1,8 @@
 GITHUB_USER="deoliveiralucas"
 GITHUB_REPOSITORY="deoliveiralucas.github.io"
 GITHUB_DIRECTORY="data/posts"
+
+SSH_DEPLOY_HOST="host"
+SSH_DEPLOY_USER="user"
+SSH_DEPLOY_PORT="port"
+SSH_DEPLOY_PATH="path"
