update disquis script

--- a/.env.dist
+++ b/.env.dist
@@ -1,3 +1,5 @@
+SITE_POST_URL="http://whoami.deoliveiralucas.net/blog"
+
 GITHUB_USER="deoliveiralucas"
 GITHUB_REPOSITORY="deoliveiralucas.github.io"
 GITHUB_DIRECTORY="data/posts"
