--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,7 @@
 RewriteEngine On
+
+RewriteCond %{SERVER_PORT} 80
+RewriteRule ^(.*)$ https://whoami.deoliveiralucas.net/$1 [R,L]
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^ index.php [QSA,L]
