--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby": "^2.15.5",
     "gatsby-image": "^2.2.16",
     "gatsby-plugin-algolia-search": "0.5.0",
+    "gatsby-plugin-google-analytics": "^2.3.6",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.2.28",
     "gatsby-plugin-offline": "^2.2.10",
