--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-sitemap": "^2.2.21",
     "gatsby-plugin-styled-components": "^3.1.4",
     "gatsby-plugin-transition-link": "^1.16.2",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-images": "^3.1.23",
     "gatsby-remark-lazy-load": "^1.0.2",
     "gatsby-remark-prismjs": "^3.3.14",
