add netlify cms config

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-google-analytics": "^2.3.6",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.2.28",
+    "gatsby-plugin-netlify-cms": "^4.3.7",
     "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-react-helmet": "^3.1.6",
     "gatsby-plugin-sharp": "^2.2.25",
@@ -29,6 +30,7 @@
     "gatsby-transformer-sharp": "^2.2.16",
     "gsap": "^3.0.1",
     "lazysizes": "^5.1.1",
+    "netlify-cms-app": "^2.12.15",
     "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
