--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-react-helmet": "^3.1.6",
     "gatsby-plugin-sharp": "^2.2.25",
     "gatsby-plugin-sitemap": "^2.2.21",
+    "gatsby-plugin-social-cards": "^0.5.12",
     "gatsby-plugin-styled-components": "^3.1.4",
     "gatsby-plugin-transition-link": "^1.16.2",
     "gatsby-plugin-web-font-loader": "^1.0.4",
