Update netlify config

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,8 @@
 command = "npm run prod"
 publish = "build_production"
 
+[[plugins]]
+    package = "netlify-plugin-php"
+    version = "latest"
+    [inputs]
+        php_version = "8.3"
