--- a/netlify.toml
+++ b/netlify.toml
@@ -5,5 +5,5 @@ publish = "build_production"
 [[plugins]]
     package = "netlify-plugin-php"
     version = "latest"
-    [inputs]
+    [plugins.inputs]
         php_version = "8.3"
